resources/tests/invalid_syntax/var_decl_semicolon.ct
//`Expected a '='!
//1
fn main()->i64 {
  var hello he;
}